[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="players" type="Panel" parent="."]
visible = false
margin_left = 420.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 540.0

[node name="player_list" type="ItemList" parent="players"]
margin_top = 30.0
margin_right = 250.0
margin_bottom = 410.0

[node name="Button" type="Button" parent="players"]
margin_left = 60.0
margin_top = 430.0
margin_right = 180.0
margin_bottom = 470.0
text = "START"

[node name="Label" type="Label" parent="players"]
margin_top = 10.0
margin_right = 94.0
margin_bottom = 24.0
text = "Players joined:"

[node name="form" type="Panel" parent="."]
margin_left = 300.0
margin_top = 140.0
margin_right = 790.0
margin_bottom = 460.0

[node name="host" type="Button" parent="form"]
margin_left = 140.0
margin_top = 240.0
margin_right = 240.0
margin_bottom = 270.0
text = "HOST"

[node name="join" type="Button" parent="form"]
margin_left = 260.0
margin_top = 240.0
margin_right = 350.0
margin_bottom = 270.0
text = "JOIN"

[node name="NickLineEdit" type="LineEdit" parent="form"]
margin_left = 140.0
margin_top = 70.0
margin_right = 350.0
margin_bottom = 110.0

[node name="IpLineEdit" type="LineEdit" parent="form"]
margin_left = 140.0
margin_top = 160.0
margin_right = 350.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="form"]
margin_left = 140.0
margin_top = 50.0
margin_right = 190.0
margin_bottom = 64.0
text = "Nick"

[node name="Label2" type="Label" parent="form"]
margin_left = 140.0
margin_top = 140.0
margin_right = 180.0
margin_bottom = 154.0
text = "IP"

[node name="error_label" type="Label" parent="form"]
margin_left = 214.0
margin_top = 290.0
margin_right = 254.0
margin_bottom = 304.0
custom_colors/font_color = Color( 0.721569, 0.105882, 0.105882, 1 )
align = 1
[connection signal="pressed" from="players/Button" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="form/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="form/join" to="." method="_on_join_pressed"]
